--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Backend (REST API) for todo-vue",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node .",
+    "dev": "nodemon ."
   },
   "author": "Mike Araujo",
   "license": "ISC",
@@ -12,7 +13,6 @@
     "bcryptjs": "^2.4.3",
     "connect-flash": "^0.1.1",
     "cors": "^2.8.4",
-    "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "express-validator": "^5.2.0",
     "jsonwebtoken": "^8.3.0",
@@ -21,5 +21,8 @@
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0"
+  },
+  "devDependencies": {
+    "dotenv": "^8.0.0"
   }
 }
